Proyecto/y.output
   0  $accept : programa $end

   1  programa : declaraciones funciones

   2  declaraciones : tipo lista_var PYC declaraciones
   3                | tipo_registro lista_var PYC declaraciones
   4                |

   5  tipo_registro : PRESTRUCTURA PRINICIO declaraciones PRFIN

   6  tipo : base tipo_arreglo

   7  base : PRENTERO
   8       | PRREAL
   9       | PRDREAL
  10       | PRCAR
  11       | PRSIN

  12  tipo_arreglo : LCOR NUM RCOR tipo_arreglo
  13               |

  14  lista_var : ID lista_var1

  15  lista_var1 : COMA ID lista_var1
  16             |

  17  funciones : PRDEF tipo ID LPAR argumentos RPAR PRINICIO declaraciones sentencias PRFIN funciones
  18            |

  19  argumentos : lista_arg
  20             | PRSIN

  21  lista_arg : lista_arg COMA arg
  22            | arg

  23  arg : tipo_arg ID

  24  tipo_arg : base param_arr

  25  param_arr : LCOR RCOR param_arr
  26            |

  27  sentencias : sentencias sentencia
  28             | sentencia

  29  sentencia : PRSI e_bool PRENTONCES sentencia PRFIN
  30            | PRSI e_bool PRENTONCES sentencia PRSINO sentencia PRFIN
  31            | PRMIENTRAS e_bool PRHACER sentencia PRFIN
  32            | PRHACER sentencia PRMIENTRAS e_bool PYC
  33            | PRSEGUN LPAR variable RPAR PRHACER casos predeterminado PRFIN
  34            | variable PIGUAL expresion PYC
  35            | PRESCRIBIR expresion PYC
  36            | PRLEER variable PYC
  37            | PRDEVOLVER PYC
  38            | PRDEVOLVER expresion PYC
  39            | PRTERMINAR PYC
  40            | PRINICIO sentencias PRFIN

  41  casos : PRCASO NUM DP sentencia casos
  42        | PRCASO NUM DP sentencia

  43  predeterminado : PRPRED DP sentencia
  44                 |

  45  e_bool : e_bool PROR e_bool
  46         | e_bool PRAND e_bool
  47         | PRNOT e_bool
  48         | relacional
  49         | PRVERDADERO
  50         | PRFALSO

  51  relacional : relacional MAYOR relacional
  52             | relacional MENOR relacional
  53             | relacional MENORIGUAL relacional
  54             | relacional MAYORIGUAL relacional
  55             | relacional MAYORMENOR relacional
  56             | relacional IGUAL relacional
  57             | expresion

  58  expresion : expresion SUMA expresion
  59            | expresion RESTA expresion
  60            | expresion MUL expresion
  61            | expresion DIV expresion
  62            | expresion MOD expresion
  63            | LPAR expresion RPAR
  64            | variable
  65            | NUM
  66            | CADENA
  67            | CARACTER

  68  variable : ID variable_comp

  69  variable_comp : dato_est_sim
  70                | arreglo
  71                | LPAR parametros RPAR

  72  dato_est_sim : dato_est_sim PUNTO ID
  73               |

  74  arreglo : LCOR expresion RCOR
  75          | arreglo LCOR expresion RCOR

  76  parametros : lista_param
  77             |

  78  lista_param : lista_param COMA expresion
  79              | expresion

state 0
	$accept : . programa $end  (0)
	declaraciones : .  (4)

	PRESTRUCTURA  shift 1
	PRENTERO  shift 2
	PRREAL  shift 3
	PRCAR  shift 4
	PRDREAL  shift 5
	PRSIN  shift 6
	$end  reduce 4
	PRDEF  reduce 4

	programa  goto 7
	declaraciones  goto 8
	tipo  goto 9
	tipo_registro  goto 10
	base  goto 11


state 1
	tipo_registro : PRESTRUCTURA . PRINICIO declaraciones PRFIN  (5)

	PRINICIO  shift 12
	.  error


state 2
	base : PRENTERO .  (7)

	.  reduce 7


state 3
	base : PRREAL .  (8)

	.  reduce 8


state 4
	base : PRCAR .  (10)

	.  reduce 10


state 5
	base : PRDREAL .  (9)

	.  reduce 9


state 6
	base : PRSIN .  (11)

	.  reduce 11


state 7
	$accept : programa . $end  (0)

	$end  accept


state 8
	programa : declaraciones . funciones  (1)
	funciones : .  (18)

	PRDEF  shift 13
	$end  reduce 18

	funciones  goto 14


state 9
	declaraciones : tipo . lista_var PYC declaraciones  (2)

	ID  shift 15
	.  error

	lista_var  goto 16


state 10
	declaraciones : tipo_registro . lista_var PYC declaraciones  (3)

	ID  shift 15
	.  error

	lista_var  goto 17


state 11
	tipo : base . tipo_arreglo  (6)
	tipo_arreglo : .  (13)

	LCOR  shift 18
	ID  reduce 13

	tipo_arreglo  goto 19


state 12
	tipo_registro : PRESTRUCTURA PRINICIO . declaraciones PRFIN  (5)
	declaraciones : .  (4)

	PRESTRUCTURA  shift 1
	PRENTERO  shift 2
	PRREAL  shift 3
	PRCAR  shift 4
	PRDREAL  shift 5
	PRSIN  shift 6
	PRFIN  reduce 4

	declaraciones  goto 20
	tipo  goto 9
	tipo_registro  goto 10
	base  goto 11


state 13
	funciones : PRDEF . tipo ID LPAR argumentos RPAR PRINICIO declaraciones sentencias PRFIN funciones  (17)

	PRENTERO  shift 2
	PRREAL  shift 3
	PRCAR  shift 4
	PRDREAL  shift 5
	PRSIN  shift 6
	.  error

	tipo  goto 21
	base  goto 11


state 14
	programa : declaraciones funciones .  (1)

	.  reduce 1


state 15
	lista_var : ID . lista_var1  (14)
	lista_var1 : .  (16)

	COMA  shift 22
	PYC  reduce 16

	lista_var1  goto 23


state 16
	declaraciones : tipo lista_var . PYC declaraciones  (2)

	PYC  shift 24
	.  error


state 17
	declaraciones : tipo_registro lista_var . PYC declaraciones  (3)

	PYC  shift 25
	.  error


state 18
	tipo_arreglo : LCOR . NUM RCOR tipo_arreglo  (12)

	NUM  shift 26
	.  error


state 19
	tipo : base tipo_arreglo .  (6)

	.  reduce 6


state 20
	tipo_registro : PRESTRUCTURA PRINICIO declaraciones . PRFIN  (5)

	PRFIN  shift 27
	.  error


state 21
	funciones : PRDEF tipo . ID LPAR argumentos RPAR PRINICIO declaraciones sentencias PRFIN funciones  (17)

	ID  shift 28
	.  error


state 22
	lista_var1 : COMA . ID lista_var1  (15)

	ID  shift 29
	.  error


state 23
	lista_var : ID lista_var1 .  (14)

	.  reduce 14


state 24
	declaraciones : tipo lista_var PYC . declaraciones  (2)
	declaraciones : .  (4)

	PRESTRUCTURA  shift 1
	PRENTERO  shift 2
	PRREAL  shift 3
	PRCAR  shift 4
	PRDREAL  shift 5
	PRSIN  shift 6
	$end  reduce 4
	PRINICIO  reduce 4
	PRDEF  reduce 4
	PRFIN  reduce 4
	PRSI  reduce 4
	PRMIENTRAS  reduce 4
	PRHACER  reduce 4
	PRSEGUN  reduce 4
	PRESCRIBIR  reduce 4
	PRLEER  reduce 4
	PRDEVOLVER  reduce 4
	PRTERMINAR  reduce 4
	ID  reduce 4

	declaraciones  goto 30
	tipo  goto 9
	tipo_registro  goto 10
	base  goto 11


state 25
	declaraciones : tipo_registro lista_var PYC . declaraciones  (3)
	declaraciones : .  (4)

	PRESTRUCTURA  shift 1
	PRENTERO  shift 2
	PRREAL  shift 3
	PRCAR  shift 4
	PRDREAL  shift 5
	PRSIN  shift 6
	$end  reduce 4
	PRINICIO  reduce 4
	PRDEF  reduce 4
	PRFIN  reduce 4
	PRSI  reduce 4
	PRMIENTRAS  reduce 4
	PRHACER  reduce 4
	PRSEGUN  reduce 4
	PRESCRIBIR  reduce 4
	PRLEER  reduce 4
	PRDEVOLVER  reduce 4
	PRTERMINAR  reduce 4
	ID  reduce 4

	declaraciones  goto 31
	tipo  goto 9
	tipo_registro  goto 10
	base  goto 11


state 26
	tipo_arreglo : LCOR NUM . RCOR tipo_arreglo  (12)

	RCOR  shift 32
	.  error


state 27
	tipo_registro : PRESTRUCTURA PRINICIO declaraciones PRFIN .  (5)

	.  reduce 5


state 28
	funciones : PRDEF tipo ID . LPAR argumentos RPAR PRINICIO declaraciones sentencias PRFIN funciones  (17)

	LPAR  shift 33
	.  error


state 29
	lista_var1 : COMA ID . lista_var1  (15)
	lista_var1 : .  (16)

	COMA  shift 22
	PYC  reduce 16

	lista_var1  goto 34


state 30
	declaraciones : tipo lista_var PYC declaraciones .  (2)

	.  reduce 2


state 31
	declaraciones : tipo_registro lista_var PYC declaraciones .  (3)

	.  reduce 3


state 32
	tipo_arreglo : LCOR NUM RCOR . tipo_arreglo  (12)
	tipo_arreglo : .  (13)

	LCOR  shift 18
	ID  reduce 13

	tipo_arreglo  goto 35


state 33
	funciones : PRDEF tipo ID LPAR . argumentos RPAR PRINICIO declaraciones sentencias PRFIN funciones  (17)

	PRENTERO  shift 2
	PRREAL  shift 3
	PRCAR  shift 4
	PRDREAL  shift 5
	PRSIN  shift 36
	.  error

	base  goto 37
	argumentos  goto 38
	lista_arg  goto 39
	arg  goto 40
	tipo_arg  goto 41


state 34
	lista_var1 : COMA ID lista_var1 .  (15)

	.  reduce 15


state 35
	tipo_arreglo : LCOR NUM RCOR tipo_arreglo .  (12)

	.  reduce 12


state 36
	base : PRSIN .  (11)
	argumentos : PRSIN .  (20)

	ID  reduce 11
	RPAR  reduce 20
	LCOR  reduce 11


state 37
	tipo_arg : base . param_arr  (24)
	param_arr : .  (26)

	LCOR  shift 42
	ID  reduce 26

	param_arr  goto 43


state 38
	funciones : PRDEF tipo ID LPAR argumentos . RPAR PRINICIO declaraciones sentencias PRFIN funciones  (17)

	RPAR  shift 44
	.  error


state 39
	argumentos : lista_arg .  (19)
	lista_arg : lista_arg . COMA arg  (21)

	COMA  shift 45
	RPAR  reduce 19


state 40
	lista_arg : arg .  (22)

	.  reduce 22


state 41
	arg : tipo_arg . ID  (23)

	ID  shift 46
	.  error


state 42
	param_arr : LCOR . RCOR param_arr  (25)

	RCOR  shift 47
	.  error


state 43
	tipo_arg : base param_arr .  (24)

	.  reduce 24


state 44
	funciones : PRDEF tipo ID LPAR argumentos RPAR . PRINICIO declaraciones sentencias PRFIN funciones  (17)

	PRINICIO  shift 48
	.  error


state 45
	lista_arg : lista_arg COMA . arg  (21)

	PRENTERO  shift 2
	PRREAL  shift 3
	PRCAR  shift 4
	PRDREAL  shift 5
	PRSIN  shift 6
	.  error

	base  goto 37
	arg  goto 49
	tipo_arg  goto 41


state 46
	arg : tipo_arg ID .  (23)

	.  reduce 23


state 47
	param_arr : LCOR RCOR . param_arr  (25)
	param_arr : .  (26)

	LCOR  shift 42
	ID  reduce 26

	param_arr  goto 50


state 48
	funciones : PRDEF tipo ID LPAR argumentos RPAR PRINICIO . declaraciones sentencias PRFIN funciones  (17)
	declaraciones : .  (4)

	PRESTRUCTURA  shift 1
	PRENTERO  shift 2
	PRREAL  shift 3
	PRCAR  shift 4
	PRDREAL  shift 5
	PRSIN  shift 6
	PRINICIO  reduce 4
	PRSI  reduce 4
	PRMIENTRAS  reduce 4
	PRHACER  reduce 4
	PRSEGUN  reduce 4
	PRESCRIBIR  reduce 4
	PRLEER  reduce 4
	PRDEVOLVER  reduce 4
	PRTERMINAR  reduce 4
	ID  reduce 4

	declaraciones  goto 51
	tipo  goto 9
	tipo_registro  goto 10
	base  goto 11


state 49
	lista_arg : lista_arg COMA arg .  (21)

	.  reduce 21


state 50
	param_arr : LCOR RCOR param_arr .  (25)

	.  reduce 25


state 51
	funciones : PRDEF tipo ID LPAR argumentos RPAR PRINICIO declaraciones . sentencias PRFIN funciones  (17)

	PRINICIO  shift 52
	PRSI  shift 53
	PRMIENTRAS  shift 54
	PRHACER  shift 55
	PRSEGUN  shift 56
	PRESCRIBIR  shift 57
	PRLEER  shift 58
	PRDEVOLVER  shift 59
	PRTERMINAR  shift 60
	ID  shift 61
	.  error

	sentencias  goto 62
	sentencia  goto 63
	variable  goto 64


state 52
	sentencia : PRINICIO . sentencias PRFIN  (40)

	PRINICIO  shift 52
	PRSI  shift 53
	PRMIENTRAS  shift 54
	PRHACER  shift 55
	PRSEGUN  shift 56
	PRESCRIBIR  shift 57
	PRLEER  shift 58
	PRDEVOLVER  shift 59
	PRTERMINAR  shift 60
	ID  shift 61
	.  error

	sentencias  goto 65
	sentencia  goto 63
	variable  goto 64


state 53
	sentencia : PRSI . e_bool PRENTONCES sentencia PRFIN  (29)
	sentencia : PRSI . e_bool PRENTONCES sentencia PRSINO sentencia PRFIN  (30)

	PRVERDADERO  shift 66
	PRFALSO  shift 67
	NUM  shift 68
	ID  shift 61
	CARACTER  shift 69
	CADENA  shift 70
	PRNOT  shift 71
	LPAR  shift 72
	.  error

	e_bool  goto 73
	variable  goto 74
	expresion  goto 75
	relacional  goto 76


state 54
	sentencia : PRMIENTRAS . e_bool PRHACER sentencia PRFIN  (31)

	PRVERDADERO  shift 66
	PRFALSO  shift 67
	NUM  shift 68
	ID  shift 61
	CARACTER  shift 69
	CADENA  shift 70
	PRNOT  shift 71
	LPAR  shift 72
	.  error

	e_bool  goto 77
	variable  goto 74
	expresion  goto 75
	relacional  goto 76


state 55
	sentencia : PRHACER . sentencia PRMIENTRAS e_bool PYC  (32)

	PRINICIO  shift 52
	PRSI  shift 53
	PRMIENTRAS  shift 54
	PRHACER  shift 55
	PRSEGUN  shift 56
	PRESCRIBIR  shift 57
	PRLEER  shift 58
	PRDEVOLVER  shift 59
	PRTERMINAR  shift 60
	ID  shift 61
	.  error

	sentencia  goto 78
	variable  goto 64


state 56
	sentencia : PRSEGUN . LPAR variable RPAR PRHACER casos predeterminado PRFIN  (33)

	LPAR  shift 79
	.  error


state 57
	sentencia : PRESCRIBIR . expresion PYC  (35)

	NUM  shift 68
	ID  shift 61
	CARACTER  shift 69
	CADENA  shift 70
	LPAR  shift 72
	.  error

	variable  goto 74
	expresion  goto 80


state 58
	sentencia : PRLEER . variable PYC  (36)

	ID  shift 61
	.  error

	variable  goto 81


state 59
	sentencia : PRDEVOLVER . PYC  (37)
	sentencia : PRDEVOLVER . expresion PYC  (38)

	PYC  shift 82
	NUM  shift 68
	ID  shift 61
	CARACTER  shift 69
	CADENA  shift 70
	LPAR  shift 72
	.  error

	variable  goto 74
	expresion  goto 83


state 60
	sentencia : PRTERMINAR . PYC  (39)

	PYC  shift 84
	.  error


state 61
	variable : ID . variable_comp  (68)
	dato_est_sim : .  (73)

	LPAR  shift 85
	LCOR  shift 86
	PRENTONCES  reduce 73
	PRHACER  reduce 73
	COMA  reduce 73
	PYC  reduce 73
	PIGUAL  reduce 73
	IGUAL  reduce 73
	PROR  reduce 73
	PRAND  reduce 73
	MAYOR  reduce 73
	MENOR  reduce 73
	MAYORIGUAL  reduce 73
	MENORIGUAL  reduce 73
	MAYORMENOR  reduce 73
	SUMA  reduce 73
	RESTA  reduce 73
	MUL  reduce 73
	DIV  reduce 73
	MOD  reduce 73
	RPAR  reduce 73
	RCOR  reduce 73
	PUNTO  reduce 73

	variable_comp  goto 87
	dato_est_sim  goto 88
	arreglo  goto 89


state 62
	funciones : PRDEF tipo ID LPAR argumentos RPAR PRINICIO declaraciones sentencias . PRFIN funciones  (17)
	sentencias : sentencias . sentencia  (27)

	PRINICIO  shift 52
	PRFIN  shift 90
	PRSI  shift 53
	PRMIENTRAS  shift 54
	PRHACER  shift 55
	PRSEGUN  shift 56
	PRESCRIBIR  shift 57
	PRLEER  shift 58
	PRDEVOLVER  shift 59
	PRTERMINAR  shift 60
	ID  shift 61
	.  error

	sentencia  goto 91
	variable  goto 64


state 63
	sentencias : sentencia .  (28)

	.  reduce 28


state 64
	sentencia : variable . PIGUAL expresion PYC  (34)

	PIGUAL  shift 92
	.  error


state 65
	sentencias : sentencias . sentencia  (27)
	sentencia : PRINICIO sentencias . PRFIN  (40)

	PRINICIO  shift 52
	PRFIN  shift 93
	PRSI  shift 53
	PRMIENTRAS  shift 54
	PRHACER  shift 55
	PRSEGUN  shift 56
	PRESCRIBIR  shift 57
	PRLEER  shift 58
	PRDEVOLVER  shift 59
	PRTERMINAR  shift 60
	ID  shift 61
	.  error

	sentencia  goto 91
	variable  goto 64


state 66
	e_bool : PRVERDADERO .  (49)

	.  reduce 49


state 67
	e_bool : PRFALSO .  (50)

	.  reduce 50


state 68
	expresion : NUM .  (65)

	.  reduce 65


state 69
	expresion : CARACTER .  (67)

	.  reduce 67


state 70
	expresion : CADENA .  (66)

	.  reduce 66


state 71
	e_bool : PRNOT . e_bool  (47)

	PRVERDADERO  shift 66
	PRFALSO  shift 67
	NUM  shift 68
	ID  shift 61
	CARACTER  shift 69
	CADENA  shift 70
	PRNOT  shift 71
	LPAR  shift 72
	.  error

	e_bool  goto 94
	variable  goto 74
	expresion  goto 75
	relacional  goto 76


state 72
	expresion : LPAR . expresion RPAR  (63)

	NUM  shift 68
	ID  shift 61
	CARACTER  shift 69
	CADENA  shift 70
	LPAR  shift 72
	.  error

	variable  goto 74
	expresion  goto 95


state 73
	sentencia : PRSI e_bool . PRENTONCES sentencia PRFIN  (29)
	sentencia : PRSI e_bool . PRENTONCES sentencia PRSINO sentencia PRFIN  (30)
	e_bool : e_bool . PROR e_bool  (45)
	e_bool : e_bool . PRAND e_bool  (46)

	PRENTONCES  shift 96
	PROR  shift 97
	PRAND  shift 98
	.  error


state 74
	expresion : variable .  (64)

	.  reduce 64


state 75
	relacional : expresion .  (57)
	expresion : expresion . SUMA expresion  (58)
	expresion : expresion . RESTA expresion  (59)
	expresion : expresion . MUL expresion  (60)
	expresion : expresion . DIV expresion  (61)
	expresion : expresion . MOD expresion  (62)

	SUMA  shift 99
	RESTA  shift 100
	MUL  shift 101
	DIV  shift 102
	MOD  shift 103
	PRENTONCES  reduce 57
	PRHACER  reduce 57
	PYC  reduce 57
	IGUAL  reduce 57
	PROR  reduce 57
	PRAND  reduce 57
	MAYOR  reduce 57
	MENOR  reduce 57
	MAYORIGUAL  reduce 57
	MENORIGUAL  reduce 57
	MAYORMENOR  reduce 57


state 76
	e_bool : relacional .  (48)
	relacional : relacional . MAYOR relacional  (51)
	relacional : relacional . MENOR relacional  (52)
	relacional : relacional . MENORIGUAL relacional  (53)
	relacional : relacional . MAYORIGUAL relacional  (54)
	relacional : relacional . MAYORMENOR relacional  (55)
	relacional : relacional . IGUAL relacional  (56)

	IGUAL  shift 104
	MAYOR  shift 105
	MENOR  shift 106
	MAYORIGUAL  shift 107
	MENORIGUAL  shift 108
	MAYORMENOR  shift 109
	PRENTONCES  reduce 48
	PRHACER  reduce 48
	PYC  reduce 48
	PROR  reduce 48
	PRAND  reduce 48


state 77
	sentencia : PRMIENTRAS e_bool . PRHACER sentencia PRFIN  (31)
	e_bool : e_bool . PROR e_bool  (45)
	e_bool : e_bool . PRAND e_bool  (46)

	PRHACER  shift 110
	PROR  shift 97
	PRAND  shift 98
	.  error


state 78
	sentencia : PRHACER sentencia . PRMIENTRAS e_bool PYC  (32)

	PRMIENTRAS  shift 111
	.  error


state 79
	sentencia : PRSEGUN LPAR . variable RPAR PRHACER casos predeterminado PRFIN  (33)

	ID  shift 61
	.  error

	variable  goto 112


state 80
	sentencia : PRESCRIBIR expresion . PYC  (35)
	expresion : expresion . SUMA expresion  (58)
	expresion : expresion . RESTA expresion  (59)
	expresion : expresion . MUL expresion  (60)
	expresion : expresion . DIV expresion  (61)
	expresion : expresion . MOD expresion  (62)

	PYC  shift 113
	SUMA  shift 99
	RESTA  shift 100
	MUL  shift 101
	DIV  shift 102
	MOD  shift 103
	.  error


state 81
	sentencia : PRLEER variable . PYC  (36)

	PYC  shift 114
	.  error


state 82
	sentencia : PRDEVOLVER PYC .  (37)

	.  reduce 37


state 83
	sentencia : PRDEVOLVER expresion . PYC  (38)
	expresion : expresion . SUMA expresion  (58)
	expresion : expresion . RESTA expresion  (59)
	expresion : expresion . MUL expresion  (60)
	expresion : expresion . DIV expresion  (61)
	expresion : expresion . MOD expresion  (62)

	PYC  shift 115
	SUMA  shift 99
	RESTA  shift 100
	MUL  shift 101
	DIV  shift 102
	MOD  shift 103
	.  error


state 84
	sentencia : PRTERMINAR PYC .  (39)

	.  reduce 39


state 85
	variable_comp : LPAR . parametros RPAR  (71)
	parametros : .  (77)

	NUM  shift 68
	ID  shift 61
	CARACTER  shift 69
	CADENA  shift 70
	LPAR  shift 72
	RPAR  reduce 77

	variable  goto 74
	expresion  goto 116
	parametros  goto 117
	lista_param  goto 118


state 86
	arreglo : LCOR . expresion RCOR  (74)

	NUM  shift 68
	ID  shift 61
	CARACTER  shift 69
	CADENA  shift 70
	LPAR  shift 72
	.  error

	variable  goto 74
	expresion  goto 119


state 87
	variable : ID variable_comp .  (68)

	.  reduce 68


state 88
	variable_comp : dato_est_sim .  (69)
	dato_est_sim : dato_est_sim . PUNTO ID  (72)

	PUNTO  shift 120
	PRENTONCES  reduce 69
	PRHACER  reduce 69
	COMA  reduce 69
	PYC  reduce 69
	PIGUAL  reduce 69
	IGUAL  reduce 69
	PROR  reduce 69
	PRAND  reduce 69
	MAYOR  reduce 69
	MENOR  reduce 69
	MAYORIGUAL  reduce 69
	MENORIGUAL  reduce 69
	MAYORMENOR  reduce 69
	SUMA  reduce 69
	RESTA  reduce 69
	MUL  reduce 69
	DIV  reduce 69
	MOD  reduce 69
	RPAR  reduce 69
	RCOR  reduce 69


state 89
	variable_comp : arreglo .  (70)
	arreglo : arreglo . LCOR expresion RCOR  (75)

	LCOR  shift 121
	PRENTONCES  reduce 70
	PRHACER  reduce 70
	COMA  reduce 70
	PYC  reduce 70
	PIGUAL  reduce 70
	IGUAL  reduce 70
	PROR  reduce 70
	PRAND  reduce 70
	MAYOR  reduce 70
	MENOR  reduce 70
	MAYORIGUAL  reduce 70
	MENORIGUAL  reduce 70
	MAYORMENOR  reduce 70
	SUMA  reduce 70
	RESTA  reduce 70
	MUL  reduce 70
	DIV  reduce 70
	MOD  reduce 70
	RPAR  reduce 70
	RCOR  reduce 70


state 90
	funciones : PRDEF tipo ID LPAR argumentos RPAR PRINICIO declaraciones sentencias PRFIN . funciones  (17)
	funciones : .  (18)

	PRDEF  shift 13
	$end  reduce 18

	funciones  goto 122


state 91
	sentencias : sentencias sentencia .  (27)

	.  reduce 27


state 92
	sentencia : variable PIGUAL . expresion PYC  (34)

	NUM  shift 68
	ID  shift 61
	CARACTER  shift 69
	CADENA  shift 70
	LPAR  shift 72
	.  error

	variable  goto 74
	expresion  goto 123


state 93
	sentencia : PRINICIO sentencias PRFIN .  (40)

	.  reduce 40


state 94
	e_bool : e_bool . PROR e_bool  (45)
	e_bool : e_bool . PRAND e_bool  (46)
	e_bool : PRNOT e_bool .  (47)

	.  reduce 47


state 95
	expresion : expresion . SUMA expresion  (58)
	expresion : expresion . RESTA expresion  (59)
	expresion : expresion . MUL expresion  (60)
	expresion : expresion . DIV expresion  (61)
	expresion : expresion . MOD expresion  (62)
	expresion : LPAR expresion . RPAR  (63)

	SUMA  shift 99
	RESTA  shift 100
	MUL  shift 101
	DIV  shift 102
	MOD  shift 103
	RPAR  shift 124
	.  error


state 96
	sentencia : PRSI e_bool PRENTONCES . sentencia PRFIN  (29)
	sentencia : PRSI e_bool PRENTONCES . sentencia PRSINO sentencia PRFIN  (30)

	PRINICIO  shift 52
	PRSI  shift 53
	PRMIENTRAS  shift 54
	PRHACER  shift 55
	PRSEGUN  shift 56
	PRESCRIBIR  shift 57
	PRLEER  shift 58
	PRDEVOLVER  shift 59
	PRTERMINAR  shift 60
	ID  shift 61
	.  error

	sentencia  goto 125
	variable  goto 64


state 97
	e_bool : e_bool PROR . e_bool  (45)

	PRVERDADERO  shift 66
	PRFALSO  shift 67
	NUM  shift 68
	ID  shift 61
	CARACTER  shift 69
	CADENA  shift 70
	PRNOT  shift 71
	LPAR  shift 72
	.  error

	e_bool  goto 126
	variable  goto 74
	expresion  goto 75
	relacional  goto 76


state 98
	e_bool : e_bool PRAND . e_bool  (46)

	PRVERDADERO  shift 66
	PRFALSO  shift 67
	NUM  shift 68
	ID  shift 61
	CARACTER  shift 69
	CADENA  shift 70
	PRNOT  shift 71
	LPAR  shift 72
	.  error

	e_bool  goto 127
	variable  goto 74
	expresion  goto 75
	relacional  goto 76


state 99
	expresion : expresion SUMA . expresion  (58)

	NUM  shift 68
	ID  shift 61
	CARACTER  shift 69
	CADENA  shift 70
	LPAR  shift 72
	.  error

	variable  goto 74
	expresion  goto 128


state 100
	expresion : expresion RESTA . expresion  (59)

	NUM  shift 68
	ID  shift 61
	CARACTER  shift 69
	CADENA  shift 70
	LPAR  shift 72
	.  error

	variable  goto 74
	expresion  goto 129


state 101
	expresion : expresion MUL . expresion  (60)

	NUM  shift 68
	ID  shift 61
	CARACTER  shift 69
	CADENA  shift 70
	LPAR  shift 72
	.  error

	variable  goto 74
	expresion  goto 130


state 102
	expresion : expresion DIV . expresion  (61)

	NUM  shift 68
	ID  shift 61
	CARACTER  shift 69
	CADENA  shift 70
	LPAR  shift 72
	.  error

	variable  goto 74
	expresion  goto 131


state 103
	expresion : expresion MOD . expresion  (62)

	NUM  shift 68
	ID  shift 61
	CARACTER  shift 69
	CADENA  shift 70
	LPAR  shift 72
	.  error

	variable  goto 74
	expresion  goto 132


state 104
	relacional : relacional IGUAL . relacional  (56)

	NUM  shift 68
	ID  shift 61
	CARACTER  shift 69
	CADENA  shift 70
	LPAR  shift 72
	.  error

	variable  goto 74
	expresion  goto 75
	relacional  goto 133


state 105
	relacional : relacional MAYOR . relacional  (51)

	NUM  shift 68
	ID  shift 61
	CARACTER  shift 69
	CADENA  shift 70
	LPAR  shift 72
	.  error

	variable  goto 74
	expresion  goto 75
	relacional  goto 134


state 106
	relacional : relacional MENOR . relacional  (52)

	NUM  shift 68
	ID  shift 61
	CARACTER  shift 69
	CADENA  shift 70
	LPAR  shift 72
	.  error

	variable  goto 74
	expresion  goto 75
	relacional  goto 135


state 107
	relacional : relacional MAYORIGUAL . relacional  (54)

	NUM  shift 68
	ID  shift 61
	CARACTER  shift 69
	CADENA  shift 70
	LPAR  shift 72
	.  error

	variable  goto 74
	expresion  goto 75
	relacional  goto 136


state 108
	relacional : relacional MENORIGUAL . relacional  (53)

	NUM  shift 68
	ID  shift 61
	CARACTER  shift 69
	CADENA  shift 70
	LPAR  shift 72
	.  error

	variable  goto 74
	expresion  goto 75
	relacional  goto 137


state 109
	relacional : relacional MAYORMENOR . relacional  (55)

	NUM  shift 68
	ID  shift 61
	CARACTER  shift 69
	CADENA  shift 70
	LPAR  shift 72
	.  error

	variable  goto 74
	expresion  goto 75
	relacional  goto 138

